--- a/package.json
+++ b/package.json
@@ -4,12 +4,26 @@
   "description": "基于Koa二次开发的小程序后台",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "AqingCyan",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.7.0"
+    "axios": "^0.18.0",
+    "basic-auth": "^2.0.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.4.0",
+    "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.11",
+    "module-alias": "^2.2.0",
+    "mysql2": "^1.6.5",
+    "npm-check": "^5.9.0",
+    "require-directory": "^2.1.1",
+    "sequelize": "^5.6.1",
+    "validator": "^10.11.0"
   }
 }
