--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "require-directory": "^2.1.1",
     "sequelize": "^5.6.1",
     "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
