--- a/example/project.config.json
+++ b/example/project.config.json
@@ -25,7 +25,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.10.0",
 	"appid": "wx450dd912dbc5797d",
-	"projectname": "islandPg",
+	"projectname": "example",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
