--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
-  "keywords": ["koa", "isLand"],
+  "keywords": [
+    "koa",
+    "isLand"
+  ],
   "author": "AqingCyan",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
+    "eslint": "^6.8.0",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
