--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "axios": "^0.18.0",
     "basic-auth": "^2.0.1",
     "bcryptjs": "^2.4.3",
-    "eslint": "^6.8.0",
     "jsonwebtoken": "^8.4.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -35,5 +34,10 @@
     "@root": ".",
     "@model": "app/model",
     "@validators": "app/validators"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.0"
   }
 }
